# CView

./: package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  Test.tsx  bindings.ts  main.tsx  test.tsx  utils.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  install.wxs  tauri.conf.json
src-tauri/src/: appdata.rs  events.rs  main.rs  operations.rs  statistics.rs  utils.rs  wrapper.rs
src-tauri/src/capture/: advanced_capture.rs  capture.rs  capture_manager.rs  commands.rs  corrections.rs  detector.rs  mod.rs  test_utils.rs  types.rs
src-tauri/src/charts/: charts.rs  commands.rs  types.rs
src-tauri/src/commands/: file.rs  image.rs
src-tauri/src/image/: commands.rs  image.rs  metadata.rs  mod.rs  operations.rs  statistics.rs  types.rs
src/components/: ButtonProgress.tsx  CaptureButton.tsx  CaptureForm.tsx  CaptureSettings.tsx  CorrectionForm.tsx  DarkMapGenerationForm.tsx  GeneralSettingsForm.tsx  ImageList.tsx  StreamButton.tsx  useCaptureProgress.ts
src/components/ImageList/: ImageListCard.tsx  ImageListRadix.tsx
src/components/Viewer/: Canvas.tsx  CaptureButton.tsx  Carousel.tsx  Overlay.tsx  RenderCaptureData.tsx  StreamButton.tsx  Viewer.tsx
src/components/charts/: ChartWindow.tsx  GenericChart.tsx  HistogramChart.tsx  LineProfileChart.tsx  ProfileChart.tsx  chartwindow.html
src/css/: Button.module.css  ButtonProgress.module.css  StreamButton.module.css  master.module.css
src/hooks/: useDetectorListener.ts
src/stores/: appSettingsStore.ts  detectorStore.ts  imageStore.ts
src/types/: appsettings.ts  charts.ts  detector.ts  draw.ts  imagestate.ts
src/utils/: StreamBuffer.ts  StreamIterator.ts  WindowCreation.ts
src/windows/: profilechart.html
src/workers/: StreamWorker.ts
