[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.9", features = [] }
autocxx-build = "0.26.0"
bindgen = "0.65"
miette = "5.10.0"

[dependencies]
tauri = { version = "2.0.0-alpha.18", features = ["test"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = ["colored"] }
tauri-plugin-dialog = "2.0.0-alpha"
tauri-plugin-window = "2.0.0-alpha"
tauri-specta = { path = "C:/dev/repos/tauri-specta", features = ["javascript", "typescript"] }
tokio = {version = "1.34.0", features= ["macros"] }
specta = { path = "C:/dev/repos/specta", features= ["chrono"] }
chrono = {version="0.4.28", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "^0.4"
image = "*"
imageproc = "*"
autocxx = "0.26.0"
cxx = "1.0"
miette = "5.10.0"
url = "2.4.0"
enum_dispatch = "0.3.12"
typetag = "0.2.13"
num_cpus = "1.16.0"
regex = "1.9.5"
rayon = "1.7.0"
tiff = "0.9.0"
thiserror = "1.0.49"
rand = "0.8.5"
concurrent-queue = "2.3.0"
tokio-util = "0.7.9"
async-trait = "0.1.74"
serde_with = "3.4.0"
async-traits = "0.0.0"
futures-core = "0.3.29"
futures-util = "0.3.29"
async-stream = "0.3.5"
futures = "0.3.29"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] # custom_protocol disables dev mode
rayon = []
